--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "application-name",
   "version": "0.0.1",
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.15.2",
     "jquery": "^3.2.1",
     "mysql": "^2.13.0",
-    "bootstrap": "^3.3.7",
+    "node-uuid": "^1.4.8",
     "sequelize": "^3.30.4"
   }
 }
